# eth_rpc_client_and_mini_indexer

./: .env.example  Cargo.toml  README.md
data/: index.json
doc/: METRICS.md
src/: error.rs  fetcher.rs  indexer.rs  main.rs  metrics.rs  rpc_client.rs  types.rs
