[package]
name = "eth_rpc_client_and_mini_indexer"
version = "0.1.0"
edition = "2021"
description = "Ethereum RPC Client & Mini Indexer"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Web server (for metrics + API)
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Environment config
dotenvy = "0.15"

# Hex encoding for Ethereum data
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
